--- a/AssignmentMainPage.html
+++ b/AssignmentMainPage.html
@@ -31,7 +31,7 @@
                 </tr>
                 <tr>
                     <td>Git and GitHub</td>
-                    <td> <a href=""> Repository </a> </td>
+                    <td> <a href="https://github.com/SagarGi/InternshipAssignment" target="_blank"> Repository Link </a> </td>
                     <td> <a href="">Click Here</a> </td>
                 </tr>
                 
