--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
             <table>
                 <tr class="table-column-heading">
-                    <th>Title</th>
+                    <th style="width:55%">Title</th>
                     <th>Source Code</th>
                     <th>Hosted Link</th>
                 </tr>
                 <tr>
-                    <td>Git and GitHub</td>
+                    <td>Git and GitHub (Static Pages)</td>
                     <td> <a href="https://github.com/SagarGi/InternshipAssignment" target="_blank"> Repository Link </a> </td>
                     <td> <a href="">Click Here</a> </td>
                 </tr>
